# perfect-tft

./: .gitignore  Cargo.toml  README.md  asset-manifest.json  fk3.txt  index.html  manifest.json  precache-manifest.4a41a903326eabad4def64e6d461b9ef.js  precache-manifest.89804c50054d91e5de20148bbbcf0174.js  precache-manifest.90853bb26f88023e9911a933d1790d93.js  precache-manifest.f6e7f4bc8f1033895f3bec6adfb4b7ed.js  service-worker.js
backend/: Cargo.toml
backend/results/set3/: level2.json  level8.json  level9.json
backend/results/set3update/: level2.json  level3.json  level4.json  level5.json  level6.json  level7.json  level8.json  level9.json
backend/src/: main.rs
backend/src/assets/set3/: galaxies.json
backend/src/assets/set3update/: champions.json  galaxies.json  traits.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: Champion.css  Champion.js  Footer.js  Header.js  Layout.js  Team.js  Trait.css  Trait.js
frontend/src/data/: level4.json  level5.json  level6.json  level7.json
results/: results.txt
src/: main.rs
src/assets/: traits.json
static/css/: main.c554460a.chunk.css  main.c554460a.chunk.css.map
static/js/: 2.3319f256.chunk.js  2.3319f256.chunk.js.map  main.228e3011.chunk.js  main.228e3011.chunk.js.map  main.8ff354fe.chunk.js  main.8ff354fe.chunk.js.map  main.cce94ebb.chunk.js  main.cce94ebb.chunk.js.map  runtime-main.a1ea675b.js  runtime-main.a1ea675b.js.map
