[package]
name = "perfect-tft"
version = "0.1.0"
authors = ["Daniel Lee <djklee@edu.uwaterloo.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.9.0"