[package]
name = "perfect-tft"
version = "1.0.0"
authors = ["Daniel Lee <itsdjklee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.9.0"
rayon = "1.3.0"
num_cpus = "1.0"